<resources>
    <string name="app_name">Most Popular Movies</string>
    <string name="top_rated">Top Rated Movies</string>
    <string name="favorite">Favorite</string>
    <string name="most_popular">Most Popular Movies</string>
    <string name="no_internet">Sorry No Internet Connection</string>
    <string name="results_for_the_adapter_key">results</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="trailer1">Watch Movie Trailer 1</string>
    <string name="trailer2">Watch Movie Trailer 2</string>
    <string name="reviews_title">Reviews</string>

    <string name="favoriteClicked">FAVORITE</string>
    <string name="unfavoriteClicked">UNFAVORITE</string>

</resources>
