<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/my_movie_details_scrollview"
        android:background="@color/colorAccent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:id="@+id/title_text_view"
                android:paddingLeft="@dimen/padding_size_big"
                android:textSize="@dimen/text_size_big"
                android:textColor="@color/text_white"
                android:text="@string/app_name"
                android:background="@color/colorPrimary"
                tools:text="Testing"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

            <ImageView
                android:layout_width="@dimen/movie_icon_dp"
                android:layout_height="@dimen/movie_icon_dp"
                android:padding="@dimen/padding_size_medium"
                android:layout_marginLeft="-30dp"
                tools:src="@mipmap/ic_launcher"
                android:layout_below="@+id/title_text_view"
                android:layout_alignParentLeft="true"
                android:id="@+id/poster_image_view"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_size_medium"
                tools:text="Testing"
                android:id="@+id/release_dates_text_view"
                android:textSize="@dimen/text_size_medium"
                android:padding="@dimen/padding_size_small"
                android:layout_below="@+id/title_text_view"
                android:layout_toRightOf="@+id/poster_image_view"
                android:layout_alignRight="@id/title_text_view"
                android:textColor="@color/text_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/text_size_medium"
                android:textSize="@dimen/text_size_medium"
                tools:text="Testing"
                android:id="@+id/rating_text_view"
                android:padding="@dimen/padding_size_small"
                android:layout_below="@+id/release_dates_text_view"
                android:layout_toRightOf="@+id/poster_image_view"
                android:textColor="@color/text_black"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/padding_size_medium"
                android:layout_alignParentEnd="true" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/overview_text_view"
                android:textSize="@dimen/text_size_medium"
                android:padding="@dimen/padding_size_medium"
                tools:text="Testing"
                android:layout_below="@+id/poster_image_view"
                android:textStyle="bold"
                android:textColor="@color/text_black"
                android:background="@color/colorAccent" />

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favoriteClicked"
                android:layout_below="@+id/rating_text_view"
                android:id="@+id/favorite_movies_button"
                android:onClick="favorite"
                android:layout_marginLeft="@dimen/padding_size_medium"
                android:layout_toRightOf="@+id/poster_image_view" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:id="@+id/reviews_linear_layout"
                android:layout_below="@id/overview_text_view"
                >

                <Button android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailer1"
                    android:layout_margin="15dp"
                    android:id="@+id/trailer_button_one"
                    android:onClick="trailer1"
                    android:gravity="center_vertical"/>

                <Button android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailer2"
                    android:layout_margin="15dp"
                    android:id="@+id/trailer_button_two"
                    android:onClick="trailer2"
                    android:gravity="center_vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews_title"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/padding_size_big"
                    android:gravity="center_horizontal"/>




            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</FrameLayout>
